--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "npm": "^8.15.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "6"
   },
